generate/clear debts im menu

--- a/app/src/main/res/menu/menu_debt_list.xml
+++ b/app/src/main/res/menu/menu_debt_list.xml
@@ -2,9 +2,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="by.verus.debts.DebtListActivity">
+
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_clear_all"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
+        android:title="@string/menu_clear_all"
         app:showAsAction="never" />
+
+    <item
+        android:id="@+id/action_generate_debts"
+        android:orderInCategory="100"
+        android:title="@string/menu_generate_debts"
+        app:showAsAction="never" />
+
 </menu>
