--- a/app/src/main/res/layout/list_item_debt.xml
+++ b/app/src/main/res/layout/list_item_debt.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingBottom="10dp"
-    android:paddingTop="10dp">
+    android:paddingTop="10dp"
+    android:background="?attr/selectableItemBackground">
 
     <TextView
         android:id="@+id/list_item_debt_name_text_view"
