--- a/app/src/main/res/layout/fragment_debt_add.xml
+++ b/app/src/main/res/layout/fragment_debt_add.xml
@@ -46,7 +46,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/hint_sum"
-            android:inputType="number" />
+            android:inputType="numberDecimal" />
 
     </android.support.design.widget.TextInputLayout>
 
