--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,7 @@
     <color name="colorAccent">#FF9800</color>
 
     <color name="snackbar_success">#4CAF50</color>
+    <color name="item_debt_my_debt">#FF0000</color>
+    <color name="item_debt_their_debt">#4CAF50</color>
 
 </resources>
