--- a/app/src/main/res/layout/activity_debt_add_pager.xml
+++ b/app/src/main/res/layout/activity_debt_add_pager.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_debt_pager_view_pager"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="by.verus.debts.DebtAddPagerActivity" />
+                                   xmlns:tools="http://schemas.android.com/tools"
+                                   android:id="@+id/activity_debt_pager_view_pager"
+                                   android:layout_width="match_parent"
+                                   android:layout_height="match_parent"
+                                   tools:context="by.verus.debts.ui.DebtAddPagerActivity"/>
