--- a/app/src/main/res/layout/activity_fragment.xml
+++ b/app/src/main/res/layout/activity_fragment.xml
@@ -4,6 +4,6 @@
              android:id="@+id/fragment_container"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
-             tools:context="by.verus.debts.ui.DebtListActivity">
+             tools:context="by.verus.debts.ui.FragmentActivity">
 
 </FrameLayout>
