--- a/app/src/main/res/menu/menu_debt_list.xml
+++ b/app/src/main/res/menu/menu_debt_list.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto"
       xmlns:tools="http://schemas.android.com/tools"
-      tools:context="by.verus.debts.ui.DebtListActivity">
+      tools:context="by.verus.debts.ui.TabActivity">
 
     <item
         android:id="@+id/action_clear_all"
