--- a/app/src/main/res/layout/fragment_tab.xml
+++ b/app/src/main/res/layout/fragment_tab.xml
@@ -36,6 +36,11 @@
                 android:layout_height="match_parent"
                 android:text="@string/tab2"/>
 
+            <android.support.design.widget.TabItem
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="@string/tab3" />
+
         </android.support.design.widget.TabLayout>
 
     </android.support.design.widget.AppBarLayout>
