UI code reorganized

--- a/app/src/main/res/layout/activity_debt_edit_pager.xml
+++ b/app/src/main/res/layout/activity_debt_edit_pager.xml
@@ -4,4 +4,4 @@
                                    android:id="@+id/activity_debt_pager_view_pager"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
-                                   tools:context="by.verus.debts.ui.DebtAddPagerActivity"/>
+    tools:context="by.verus.debts.ui.DebtEditPagerActivity" />
