--- a/app/src/main/res/layout/fragment_debtor_list.xml
+++ b/app/src/main/res/layout/fragment_debtor_list.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="by.verus.debts.ui.TabFragment">
+    tools:context="by.verus.debts.ui.tabs.TabFragment">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/debtor_recycler_view"
